Fixed spacing in navbar and added landing link to Home

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -13,6 +13,3 @@
     /* padding-left:2%; */
 }
 
-.nav-link{
-    padding-right:60%;
-}
